--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,9 @@
+ALLEGRO_MODULES = allegro-5.0 allegro_main-5.0 allegro_image-5.0
+
 all:
 	@mkdir -p build
 	@objfw-compile --lib 0.0 -o objgamekit --builddir build *.m \
-		--arc `pkg-config --cflags --libs allegro-5.0 allegro_main-5.0`
+		--arc `pkg-config --cflags --libs ${ALLEGRO_MODULES}`
 
 clean:
 	@rm -fr build libobjgamekit.* *~
