Reexport allegro_main on OS X.

--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,8 @@
 AC_INIT(ObjGameKit, 0.1, js@webkeks.org)
 AC_CONFIG_SRCDIR(src)
 
+AC_CANONICAL_HOST
+
 AC_CHECK_TOOL(OBJFW_CONFIG, objfw-config)
 AS_IF([test x"$OBJFW_CONFIG" = x""], [
 	AC_MSG_ERROR(You need ObjFW and objfw-config installed!)
@@ -44,6 +46,12 @@ PKG_CHECK_MODULES(allegro5, [allegro-5.0 allegro_main-5.0 allegro_image-5.0], [
 	AC_MSG_ERROR(You need allegro{_main,_image}-5.0 installed!)
 ])
 
+case "$host_os" in
+	darwin*)
+		AC_SUBST(REEXPORT_ALLEGRO, ["-Wl,-reexport-lallegro_main"])
+		;;
+esac
+
 # We add -Werror after all tests in case some tests emit warnings
 OBJCFLAGS="$OBJCFLAGS -Werror"
 
@@ -57,5 +65,5 @@ AC_SUBST(CPP)
 AC_SUBST(CPPFLAGS)
 
 AC_SUBST(PACKAGE, ObjGameKit)
-AC_CONFIG_FILES(buildsys.mk)
+AC_CONFIG_FILES([buildsys.mk extra.mk])
 AC_OUTPUT
